--- a/MicroRabbit/MIcroRabbit.Banking.Api/Properties/launchSettings.json
+++ b/MicroRabbit/MIcroRabbit.Banking.Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MIcroRabbit.Banking.Api": {
+    "MicroRabbit.Banking.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger/index.html",
